--- a/html/test01.html
+++ b/html/test01.html
@@ -6,6 +6,7 @@
     <body>
         <p id="p1">这是第一段文字</p>
         <p id="p2">这是第二段文字</p>
+        <!-- 内部插入JS文件 -->
         <script type="text/javascript">
             document.write("hello javascript");
             document.getElementById("p1").style.color = "blue";
